# Mailing

./: .env.sample  pyproject.toml
config/: settings.py  urls.py
newsletters/: admin.py  forms.py  models.py  services.py  urls.py  views.py
newsletters/management/commands/: send_newsletter.py
newsletters/migrations/: 0001_initial.py  0002_initial.py
newsletters/templates/newsletters/: base.html  home.html  newsletter_attempt_list.html
newsletters/templates/newsletters/includes/: dropdown.html  header.html  nav_icons.html  sidebar.html
newsletters/templates/newsletters/message/: message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
newsletters/templates/newsletters/newsletter/: newsletter_confirm_delete.html  newsletter_detail.html  newsletter_form.html  newsletter_list.html
newsletters/templates/newsletters/recipient/: recipient_confirm_delete.html  recipient_detail.html  recipient_form.html  recipient_list.html
static/js/: chart.umd.js
users/: forms.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/: login.html
users/templates/users/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  profile.html  user_form.html  user_list.html
